[metadata]
name = anonchat
version = 0.0.3
author = KrutosX
author_email = krutosviprus@gmail.com
description = Package for interacting with anonchat servers
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/anonchat-org/anonchat-api.py
project_urls =
    Bug Tracker = https://github.com/anonchat-org/anonchat-api.py/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src